--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rari-governance-contracts",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Smart contracts for the Rari Governance system.",
   "main": "truffle-config.js",
   "directories": {
@@ -36,6 +36,7 @@
   "dependencies": {
     "@chainlink/contracts": "0.0.9",
     "@openzeppelin/contracts-ethereum-package": "^2.5.0",
-    "@openzeppelin/upgrades": "^2.8.0"
+    "@openzeppelin/upgrades": "^2.8.0",
+    "@uniswap/v2-core": "^1.0.1"
   }
 }
