--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "email": "david@rari.capital",
     "url": "https://github.com/davidlucid"
   },
-  "license": "SEE LICENSE IN LICENSE",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Rari-Capital/rari-governance-contracts/issues"
   },
